cambios en la apariencia de la página

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,18 @@
   <meta charset="utf-8">
   <title>MiPerfil</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Conoce a Jonathan Lozada">
+  <meta name="image" content="./assets/images/jonathan.png">
+  <meta name="url" content="https://jonathanlozadagit.github.io/miPerfil/">
+
+  <meta property="og:url" content="https://jonathanlozadagit.github.io/miPerfil/" />
+  <meta property="og:type" content="page" />
+  <meta property="og:description" content="Conoce a Jonathan Lozada" />
+  <meta property="og:image" content="https://jonathanlozadagit.github.io/miPerfil/assets/images/jonathan.png" />
+
+  <link rel="icon" type="image/x-icon" href="./assets/images/jonathan.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
